creación del index con un resumen y 3 articulos

--- a/index.html
+++ b/index.html
@@ -1,12 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Esta página web es parte del proyecto final.">
     <title>Menú | Dingo y Dogo</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+        <img src="images/logo.jpg" alt="Imagen del logo de Travesuras de Dingo y Dogo ">
+        <section>
+            <h1>Travesuras de Dingo y Dogo</h1>
+        </section>
+    </header>
+    <nav>
+        <ul class="navigation">
+            <li><a class="ham" href="#">Menú</a></li>
+            <li><a href="juegos.html">Juegos</a></li>
+            <li><a href="novedades.html">Novedades</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+    </nav>
+    <main>
+        <div class="father">
+            <div class="content-1">
+                <div class="resumen">
+                    <h2>Resumen</h2>
+                    <p>
+
+                    </p>
+                </div>
+                <div class="imagen">
+                    <img src="images/resumen.jpg" alt="Imagen de Dingo y Dogo en un parque celebrando">
+                </div>
+            </div>
+
+            <div class="content-2">
+                <div class="article">
+                    <div class="article-1">
+                        <img class="article-image" src="images/dingo.jpg" alt="">
+                        <h3>Dingo</h3>
+                        <p>
+                            Es un pequeño hámster que tiene 4 años, es gordito, chiquito y travieso.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="article">
+                    <div class="article-2">
+                        <img class="article-image" src="images/dogo.jpg" alt="">
+                        <h3>Dogo</h3>
+                        <p>
+                            Es un perrito Shih Tzu de 4 años, es travieso, amigable, divertido y curioso.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="article">
+                    <div class="article-3">
+                        <img class="article-image" src="" alt="">
+                        <h3>Mamá Hámster</h3>
+                        <p>
+                            Es un hámster de 30 años, es amorosa, dedicada, siempre trata de enseñar los valores a Dingo y Dogo
+                        </p>
+                    </div>
+                </div>
+        </div>
+    </main>
+    <footer>
+        <p>
+            ¿Quieres saber que pasa después?<br>
+            <a href="">Link del cuento</a><br>
+            &copy; 2022 Travesuras de Dingo y Dogo - Kevin Espinoza
+        </p>
+    </footer>
     
 </body>
 </html>
