Update two sub-pages

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <nav>
         <ul class="navigation">
             <li><a class="ham" href="#">Menú</a></li>
+            <li class="menuname"><a href="index.html">Principal</a></li>
             <li><a href="juegos.html">Juegos</a></li>
             <li><a href="novedades.html">Novedades</a></li>
             <li><a href="contacto.html">Contacto</a></li>
