save new changes

--- a/juegos.html
+++ b/juegos.html
@@ -27,14 +27,16 @@
     <main>
         <h2>Juegos</h2>
         <p>
-            
+
         </p>
         <div class="father">
             <div class="content-1">
+                <h3>Laberinto</h3>
                 <img src="" alt="">
             </div>
 
             <div class="content-2">
+                <h3>Sopa de Letras</h3>
                 <img src="" alt="">
             </div>   
         </div>
