--- a/novedades.html
+++ b/novedades.html
@@ -28,10 +28,33 @@
         <h2>Novedades</h2>
         <div class="father">
             <div class="content-1">
-                
+                <div class="products">
+                    <h3>Posters</h3>
+                    <img src="images/poster.jpg" alt="">
+                </div>
+                <div class="products">
+                    <h3>Stickers</h3>
+                    <img src="images/stickers.jpg" alt="">
+                </div>
+                <div class="products">
+                    <h3>Caja de cuento</h3>
+                    <img src="images/cajacuento.jpg" alt="">
+                </div> 
             </div>
 
             <div class="content-2">
+                <div class="products">
+                    <h3>Mockup 1</h3>
+                    <img src="images/mockup1.jpg" alt="">
+                </div>
+                <div class="products">
+                    <h3>Mockup 2</h3>
+                    <img src="images/mockup2.jpg" alt="">
+                </div>
+                <div class="products">
+                    <h3>Mockup 3</h3>
+                    <img src="images/mockup3.jpg" alt="">
+                </div>
                 
             </div>
         </div>
