--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Esta página web es parte del proyecto final.">
     <title>Menú | Dingo y Dogo</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
 </head>
 <body>
     <header>
@@ -31,7 +33,7 @@
             </div>
 
             <div class="content-2">
-                
+
             </div>
         </div>
     </main>
@@ -42,6 +44,6 @@
             &copy; 2022 Travesuras de Dingo y Dogo - Kevin Espinoza
         </p>
     </footer>
-    
+    <script src="js/home.js"></script>
 </body>
 </html>
