--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Esta página web es parte del proyecto final.">
     <title>Menú | Dingo y Dogo</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
 </head>
 <body>
     <header>
@@ -38,7 +40,7 @@
                     </p>
                 </div>
                 <div class="content-2">
-                    <img src="images/resumen.jpg" alt="Imagen de Dingo y Dogo en un parque celebrando">
+                    <img id="resumen-image" src="images/resumen.jpg" alt="Imagen de Dingo y Dogo en un parque celebrando">
                 </div>
             </div>
             
@@ -82,6 +84,6 @@
             &copy; 2022 Travesuras de Dingo y Dogo - Kevin Espinoza
         </p>
     </footer>
-    
+    <script src="js/home.js"></script>
 </body>
 </html>
