--- a/juegos.html
+++ b/juegos.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Esta página web es parte del proyecto final.">
     <title>Juegos | Dingo y Dogo</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
 </head>
 <body>
     <header>
@@ -25,10 +27,13 @@
         </ul>
     </nav>
     <main>
-        <h2>Juegos</h2>
-        <p>
-
-        </p>
+        <div>
+            <h2>Juegos</h2>
+            <p>
+                ¡Bienvenidos a nuestro portal! En esta sección encontrarás diversos juegos para que te diviertas 
+                mucho.Espero de corazón que sean de tu agrado. Por favor recomiéndanos y no olvides visitarnos.
+            </p>
+        </div>
         <div class="father">
             <div class="content-1">
                 <h3>Laberinto</h3>
@@ -48,6 +53,6 @@
             &copy; 2022 Travesuras de Dingo y Dogo - Kevin Espinoza
         </p>
     </footer>
-    
+    <script src="js/home.js"></script>
 </body>
 </html>
