--- a/novedades.html
+++ b/novedades.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Esta página web es parte del proyecto final.">
     <title>Menú | Dingo y Dogo</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
 </head>
 <body>
     <header>
@@ -30,30 +32,30 @@
             <div class="content-1">
                 <div class="products">
                     <h3>Posters</h3>
-                    <img src="images/poster.jpg" alt="">
+                    <img src="images/poster.jpg" alt="Imagen de Dingo y Dogo en el patio">
                 </div>
                 <div class="products">
                     <h3>Stickers</h3>
-                    <img src="images/stickers.jpg" alt="">
+                    <img src="images/stickers.jpg" alt="Imagen de 6 stickers de Dingo y Dogo">
                 </div>
                 <div class="products">
                     <h3>Caja de cuento</h3>
-                    <img src="images/cajacuento.jpg" alt="">
+                    <img src="images/cajacuento.jpg" alt="Imagen de caja de cuentos horizontal ">
                 </div> 
             </div>
 
             <div class="content-2">
                 <div class="products">
                     <h3>Mockup 1</h3>
-                    <img src="images/mockup1.jpg" alt="">
+                    <img src="images/mockup1.jpg" alt="Imagen de discos de Dingo y Dogo">
                 </div>
                 <div class="products">
                     <h3>Mockup 2</h3>
-                    <img src="images/mockup2.jpg" alt="">
+                    <img src="images/mockup2.jpg" alt="Imagen de niño con polo de Dingo y Dogo">
                 </div>
                 <div class="products">
                     <h3>Mockup 3</h3>
-                    <img src="images/mockup3.jpg" alt="">
+                    <img src="images/mockup3.jpg" alt="Imagen de rompecabezas de Dingo y Dogo">
                 </div>
                 
             </div>
@@ -66,6 +68,6 @@
             &copy; 2022 Travesuras de Dingo y Dogo - Kevin Espinoza
         </p>
     </footer>
-    
+    <script src="js/home.js"></script>
 </body>
 </html>
