--- a/juegos.html
+++ b/juegos.html
@@ -36,13 +36,17 @@
         </div>
         <div class="father">
             <div class="content-1">
-                <h3>Laberinto</h3>
-                <img src="" alt="">
+                <div class="juego">
+                    <h3 class="juegos">Laberinto</h3>
+                    <img src="" alt="">                   
+                </div>
             </div>
 
             <div class="content-2">
-                <h3>Sopa de Letras</h3>
-                <img src="" alt="">
+                <div class="juego">
+                    <h3 class="juegos">Sopa de Letras</h3>
+                    <img src="" alt="">
+                </div>
             </div>   
         </div>
     </main>
