--- a/novedades.html
+++ b/novedades.html
@@ -27,34 +27,37 @@
         </ul>
     </nav>
     <main>
-        <h2>Novedades</h2>
+        <div>
+            <h2>Novedades</h2>
+            <p></p>
+        </div>
         <div class="father">
             <div class="content-1">
                 <div class="products">
-                    <h3>Posters</h3>
+                    <h3 class="productos">Posters</h3>
                     <img src="images/poster.jpg" alt="Imagen de Dingo y Dogo en el patio">
                 </div>
                 <div class="products">
-                    <h3>Stickers</h3>
+                    <h3 class="productos">Stickers</h3>
                     <img src="images/stickers.jpg" alt="Imagen de 6 stickers de Dingo y Dogo">
                 </div>
                 <div class="products">
-                    <h3>Caja de cuento</h3>
+                    <h3 class="productos">Caja de cuento</h3>
                     <img src="images/cajacuento.jpg" alt="Imagen de caja de cuentos horizontal ">
                 </div> 
             </div>
 
             <div class="content-2">
                 <div class="products">
-                    <h3>Mockup 1</h3>
+                    <h3 class="productos">Mockup 1</h3>
                     <img src="images/mockup1.jpg" alt="Imagen de discos de Dingo y Dogo">
                 </div>
                 <div class="products">
-                    <h3>Mockup 2</h3>
+                    <h3 class="productos">Mockup 2</h3>
                     <img src="images/mockup2.jpg" alt="Imagen de niño con polo de Dingo y Dogo">
                 </div>
                 <div class="products">
-                    <h3>Mockup 3</h3>
+                    <h3 class="productos">Mockup 3</h3>
                     <img src="images/mockup3.jpg" alt="Imagen de rompecabezas de Dingo y Dogo">
                 </div>
                 
