edit index and juegos

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                 <div class="article-1">
                     <h3>Dingo</h3>
                     <p>
-                        Es un pequeño hámster que tiene 4 años, es gordito, chiquito y travieso.
+                        Es un pequeño hámster que tiene 4 años, es gordito, chiquito, travieso, le gustan mucho
+                        los postres y también le gusta pasar tiempo y divertirse con sus amigos.
                     </p>
                     <img class="article-image" src="images/dingo.jpg" alt="Imagen de Dingo jugando con un carro">
                 </div>
@@ -57,17 +58,18 @@
                 <div class="article-1">
                     <h3>Dogo</h3>
                     <p>
-                        Es un perrito Shih Tzu de 4 años, es travieso, amigable, divertido y curioso.
+                        Es un perrito shih tzu de 4 años, es travieso, amigable, divertido,curioso,alegre y risueño,
+                        él es muy leal a sus amigos ,le gusta jugar por las tarde con Dogo.
                     </p>
                     <img class="article-image" src="images/dogo.jpg" alt="Imagen de dogo con su patineta">
                 </div>
             
-
             
                 <div class="article-1">
                     <h3>Mamá Hámster</h3>
                     <p>
-                        Es un hámster de 30 años, es amorosa, dedicada, siempre trata de enseñar los valores a Dingo y Dogo
+                        Es un hámster de 30 años, es amorosa, responsable, dedicada, tierna con sus hijos, siempre trata de enseñar los valores a Dingo y Dogo.
+
                     </p>
                     <img class="article-image" src="images/dingo.jpg" alt="Imagen de mamá hámster">
                 </div>
