--- a/juegos.html
+++ b/juegos.html
@@ -39,6 +39,11 @@
             <div class="content-1">
                 <div class="juego">
                     <h3 class="juegos">Laberinto</h3>
+                    <p>
+                        Los laberintos para niños son una actividad divertida que los ayuda a desarrollar habilidades
+                        de motricidad fina, las cuales son esenciales para la caligrafía. Al mismo tiempo, los laberintos
+                        infantiles favorecen la lógica y estrategia y la capacidad de enfoque y concentración.
+                    </p>
                     <img src="" alt="">                   
                 </div>
             </div>
@@ -46,6 +51,12 @@
             <div class="content-2">
                 <div class="juego">
                     <h3 class="juegos">Sopa de Letras</h3>
+                    <p>
+                        La sopa de letras ayuda, principalmente, a aumentar la fluidez lingüística, a mejorar la
+                        capacidad de deletreo y enseña paciencia y persistencia. Encuentre dentro de la cuadricula
+                        de letras, las palabras colocadas tanto en posición horizontal, vertical, diagonal, arriba
+                        o abajo.
+                    </p>
                     <img src="" alt="">
                 </div>
             </div>   
