add link in all views

--- a/contacto.html
+++ b/contacto.html
@@ -28,20 +28,44 @@
         </ul>
     </nav>
     <main>
-        <div class="father">
-            <div class="content-1">
-                
-            </div>
+        <div>
+            <h2>¿QUIENES SOMOS?</h2>
+            <p>
+                Somos un dúo de diseñadoras y comunicadoras en proceso, apasionadas, creativas, amantes de la belleza, adictas al café, perfeccionistas y despistadas // Desarrollamos el proyecto de un cuento innovador, y una página web, espero que sea de tu agrado y te guste mucho// 
+                Estaremos realizando nuevos proyectos y puedes contactarte con nosotras por estos medios.
+            </p>
+        </div>
+        <div>
+            <h2>Ilustrado y Editado por:</h2>
+            <div class="father">
+                <div class="content-1">
+                    <h3>Keith Espinoza</h3>
+                    <p>
+                        Correo:<br>
+                        keithreyes.50@gmail.com<br>
+                        Número telefónico:<br>
+                        996134591
+                    </p>
+                    
+                </div>
 
-            <div class="content-2">
+                <div class="content-2">
+                    <h3>Ana Quispe</h3>
+                    <p>
+                        Correo:<br>
+                        example@gmail.com<br>
+                        Número telefónico:<br>
+                        996134591
+                    </p>
 
+                </div>
             </div>
         </div>
     </main>
     <footer>
         <p>
             ¿Quieres saber que pasa después?<br>
-            <a href="">Link del cuento</a><br>
+            <a href="https://issuu.com/keithreyes555/docs/cuento_offi_dingo_y_dogo_izzu_74f6c382810b29">Link del cuento</a><br>
             &copy; 2022 Travesuras de Dingo y Dogo - Kevin Espinoza
         </p>
     </footer>
