--- a/novedades.html
+++ b/novedades.html
@@ -68,7 +68,7 @@
     <footer>
         <p>
             ¿Quieres saber que pasa después?<br>
-            <a href="">Link del cuento</a><br>
+            <a href="https://issuu.com/keithreyes555/docs/cuento_offi_dingo_y_dogo_izzu_74f6c382810b29">Link del cuento</a><br>
             &copy; 2022 Travesuras de Dingo y Dogo - Kevin Espinoza
         </p>
     </footer>
