--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Esta página web es parte del proyecto final.">
-    <title>Menú | Dingo y Dogo</title>
+    <title>Contacto | Dingo y Dogo</title>
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
@@ -29,7 +29,7 @@
     </nav>
     <main>
         <div>
-            <h2>¿QUIENES SOMOS?</h2>
+            <h2>¿QUIÉNES SOMOS?</h2>
             <p>
                 Somos un dúo de diseñadoras y comunicadoras en proceso, apasionadas, creativas, amantes de la belleza, adictas al café, perfeccionistas y despistadas // Desarrollamos el proyecto de un cuento innovador, y una página web, espero que sea de tu agrado y te guste mucho// 
                 Estaremos realizando nuevos proyectos y puedes contactarte con nosotras por estos medios.
@@ -39,8 +39,8 @@
             <h2>Ilustrado y Editado por:</h2>
             <div class="father">
                 <div class="content-1">
-                    <h3>Keith Espinoza</h3>
-                    <p>
+                    <h3 class="info">Keith Margarita Espinoza Reyes</h3>
+                    <p class="info">
                         Correo:<br>
                         keithreyes.50@gmail.com<br>
                         Número telefónico:<br>
@@ -50,12 +50,12 @@
                 </div>
 
                 <div class="content-2">
-                    <h3>Ana Quispe</h3>
-                    <p>
+                    <h3 class="info">Ana Cristina Quispe Vásquez</h3>
+                    <p class="info">
                         Correo:<br>
-                        example@gmail.com<br>
+                        anacristinaquisvas@gmail.com<br>
                         Número telefónico:<br>
-                        996134591
+                        938202872
                     </p>
 
                 </div>
