--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Esta página web es parte del proyecto final.">
-    <title>Menú | Dingo y Dogo</title>
+    <title>Principal | Dingo y Dogo</title>
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
@@ -58,8 +58,8 @@
                 <div class="article-1">
                     <h3>Dogo</h3>
                     <p>
-                        Es un perrito shih tzu de 4 años, es travieso, amigable, divertido,curioso,alegre y risueño,
-                        él es muy leal a sus amigos ,le gusta jugar por las tarde con Dogo.
+                        Es un perrito shih tzu de 4 años, es travieso, amigable, divertido, curioso, alegre y risueño,
+                        él es muy leal a sus amigos, le gusta jugar por las tarde con Dogo.
                     </p>
                     <img class="article-image" src="images/dogo.jpg" alt="Imagen de dogo con su patineta">
                 </div>
@@ -68,10 +68,10 @@
                 <div class="article-1">
                     <h3>Mamá Hámster</h3>
                     <p>
-                        Es un hámster de 30 años, es amorosa, responsable, dedicada, tierna con sus hijos, siempre trata de enseñar los valores a Dingo y Dogo.
+                        Es una hámster de 30 años, es amorosa, responsable, dedicada, tierna con sus hijos, siempre trata de enseñar los valores a Dingo y Dogo.
 
                     </p>
-                    <img class="article-image" src="images/dingo.jpg" alt="Imagen de mamá hámster">
+                    <img class="article-image" src="images/m-hamster.jpg" alt="Imagen de mamá hámster">
                 </div>
             </div>
         </div>
