--- a/juegos.html
+++ b/juegos.html
@@ -32,7 +32,7 @@
             <h2>Juegos</h2>
             <p>
                 ¡Bienvenidos a nuestro portal! En esta sección encontrarás diversos juegos para que te diviertas 
-                mucho.Espero de corazón que sean de tu agrado. Por favor recomiéndanos y no olvides visitarnos.
+                mucho. Espero de corazón que sean de tu agrado. Por favor recomiéndanos y no olvides visitarnos.
             </p>
         </div>
         <div class="father">
@@ -44,7 +44,7 @@
                         de motricidad fina, las cuales son esenciales para la caligrafía. Al mismo tiempo, los laberintos
                         infantiles favorecen la lógica y estrategia y la capacidad de enfoque y concentración.
                     </p>
-                    <img src="" alt="">                   
+                    <img  src="images/laberinto.jpg" alt="Imagen del laberinto de Dingo y Dogo">                   
                 </div>
             </div>
 
@@ -57,7 +57,7 @@
                         de letras, las palabras colocadas tanto en posición horizontal, vertical, diagonal, arriba
                         o abajo.
                     </p>
-                    <img src="" alt="">
+                    <img src="images/sopa_de_letras.jpg" alt="Imagen de sopa de letras de Dingo y Dogo">
                 </div>
             </div>   
         </div>
