--- a/novedades.html
+++ b/novedades.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Esta página web es parte del proyecto final.">
-    <title>Menú | Dingo y Dogo</title>
+    <title>Novedades | Dingo y Dogo</title>
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
@@ -30,12 +30,15 @@
     <main>
         <div>
             <h2>Novedades</h2>
-            <p></p>
+            <p>
+                A continuación le mostramos los diversos productos que puedes adquirir de nuestro cuento Travesuras
+                de Dingo y Dogo, están hechos con mucho amor y dedicación para ustedes. Esperamos que sean de su agrado.
+            </p>
         </div>
         <div class="father">
             <div class="content-1">
                 <div class="products">
-                    <h3 class="productos">Posters</h3>
+                    <h3 class="productos">Pósters</h3>
                     <img class="imagenes" src="images/poster.jpg" alt="Imagen de Dingo y Dogo en el patio">
                 </div>
                 <div class="products">
@@ -45,7 +48,19 @@
                 <div class="products">
                     <h3 class="productos">Caja de cuento</h3>
                     <img class="imagenes" src="images/cajacuento.jpg" alt="Imagen de caja de cuentos horizontal ">
-                </div> 
+                </div>
+                <div class="products">
+                    <h3 class="productos">Caja 1</h3>
+                    <img class="imagenes" src="images/caja1.jpg" alt="Imagen de caja de cuentos horizontal ">
+                </div>
+                <div class="products">
+                    <h3 class="productos">Caja 3</h3>
+                    <img class="imagenes" src="images/caja3.jpg" alt="Imagen de caja de cuentos horizontal ">
+                </div>
+                <div class="products">
+                    <h3 class="productos">Caja 5</h3>
+                    <img class="imagenes" src="images/caja5.jpg" alt="Imagen de caja de cuentos horizontal ">
+                </div>                
             </div>
 
             <div class="content-2">
@@ -61,6 +76,14 @@
                     <h3 class="productos">Mockup 3</h3>
                     <img class="imagenes" src="images/mockup3.jpg" alt="Imagen de rompecabezas de Dingo y Dogo">
                 </div>
+                <div class="products">
+                    <h3 class="productos">Caja 2</h3>
+                    <img class="imagenes" src="images/caja2.jpg" alt="Imagen de caja de cuentos horizontal ">
+                </div> 
+                <div class="products">
+                    <h3 class="productos">Caja 4</h3>
+                    <img class="imagenes" src="images/caja4.jpg" alt="Imagen de caja de cuentos horizontal ">
+                </div> 
                 
             </div>
         </div>
