--- a/contacto.html
+++ b/contacto.html
@@ -30,7 +30,7 @@
     <main>
         <div>
             <h2>¿QUIÉNES SOMOS?</h2>
-            <p>
+            <p class="text">
                 Somos un dúo de diseñadoras y comunicadoras en proceso, apasionadas, creativas, amantes de la belleza, adictas al café, perfeccionistas y despistadas // Desarrollamos el proyecto de un cuento innovador, y una página web, espero que sea de tu agrado y te guste mucho// 
                 Estaremos realizando nuevos proyectos y puedes contactarte con nosotras por estos medios.
             </p>
@@ -39,25 +39,29 @@
             <h2>Ilustrado y Editado por:</h2>
             <div class="father">
                 <div class="content-1">
-                    <h3 class="info">Keith Margarita Espinoza Reyes</h3>
-                    <p class="info">
-                        Correo:<br>
-                        keithreyes.50@gmail.com<br>
-                        Número telefónico:<br>
-                        996134591
-                    </p>
-                    
+                    <div class="info">
+                        <h3 class="info" id="contacto">Keith Margarita Espinoza Reyes</h3>
+                        <img class="contact-img" src="images/keith.jpg" alt="Imagen de contacto animada de Keith">
+                        <p class="info">
+                            Correo:<br>
+                            keithreyes.50@gmail.com<br>
+                            Número telefónico:<br>
+                            996134591
+                        </p>
+                    </div>
                 </div>
 
                 <div class="content-2">
-                    <h3 class="info">Ana Cristina Quispe Vásquez</h3>
-                    <p class="info">
-                        Correo:<br>
-                        anacristinaquisvas@gmail.com<br>
-                        Número telefónico:<br>
-                        938202872
-                    </p>
-
+                    <div class="info">
+                        <h3 class="info" id="contacto">Ana Cristina Quispe Vásquez</h3>
+                        <img class="contact-img" src="images/ana.jpg" alt="Imagen de contacto animada de Ana">
+                        <p class="info">
+                            Correo:<br>
+                            anacristinaquisvas@gmail.com<br>
+                            Número telefónico:<br>
+                            938202872
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
