--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="father">
             <div class="content-1">
                 <h2>Resumen</h2>
-                <p>
+                <p class="text">
                     Este cuento está basado en la historia del hamster Dingo y su amigo el perrito Dogo, muy emocionados
                     pasan la tarde jugando en el patio trasero, ambos niños empiezan a hacer sus travesuras y sacan todos
                     los juguetes ocasionando un gran desorden. La mamá hámster les pidió que ordenaran pero los niños no la
