--- a/juegos.html
+++ b/juegos.html
@@ -30,7 +30,7 @@
     <main>
         <div>
             <h2>Juegos</h2>
-            <p>
+            <p class="text">
                 ¡Bienvenidos a nuestro portal! En esta sección encontrarás diversos juegos para que te diviertas 
                 mucho. Espero de corazón que sean de tu agrado. Por favor recomiéndanos y no olvides visitarnos.
             </p>
@@ -39,7 +39,7 @@
             <div class="content-1">
                 <div class="juego">
                     <h3 class="juegos">Laberinto</h3>
-                    <p>
+                    <p class="text">
                         Los laberintos para niños son una actividad divertida que los ayuda a desarrollar habilidades
                         de motricidad fina, las cuales son esenciales para la caligrafía. Al mismo tiempo, los laberintos
                         infantiles favorecen la lógica y estrategia y la capacidad de enfoque y concentración.
@@ -51,7 +51,7 @@
             <div class="content-2">
                 <div class="juego">
                     <h3 class="juegos">Sopa de Letras</h3>
-                    <p>
+                    <p class="text">
                         La sopa de letras ayuda, principalmente, a aumentar la fluidez lingüística, a mejorar la
                         capacidad de deletreo y enseña paciencia y persistencia. Encuentre dentro de la cuadricula
                         de letras, las palabras colocadas tanto en posición horizontal, vertical, diagonal, arriba
