--- a/novedades.html
+++ b/novedades.html
@@ -30,7 +30,7 @@
     <main>
         <div>
             <h2>Novedades</h2>
-            <p>
+            <p class="text">
                 A continuación le mostramos los diversos productos que puedes adquirir de nuestro cuento Travesuras
                 de Dingo y Dogo, están hechos con mucho amor y dedicación para ustedes. Esperamos que sean de su agrado.
             </p>
