--- a/novedades.html
+++ b/novedades.html
@@ -73,7 +73,7 @@
                     <img class="imagenes" src="images/mockup2.jpg" alt="Imagen de niño con polo de Dingo y Dogo">
                 </div>
                 <div class="products">
-                    <h3 class="productos"><a src="https://im-a-puzzle.com/share/1fe79cc5e96dac4">Rompecabezas</a></h3>
+                    <a href="https://im-a-puzzle.com/share/1fe79cc5e96dac4"><h3 class="productos">Rompecabezas</h3></a>
                     <img class="imagenes" src="images/mockup3.jpg" alt="Imagen de rompecabezas de Dingo y Dogo">
                 </div>
                 <div class="products">
