--- a/juegos.html
+++ b/juegos.html
@@ -59,8 +59,24 @@
                     </p>
                     <img src="images/sopa_de_letras.jpg" alt="Imagen de sopa de letras de Dingo y Dogo">
                 </div>
-            </div>   
+            </div> 
         </div>
+        <div class="padre">
+                <div class="hijo1">
+                    <h3 class="juegos" id="rompecabezas">Rompecabezas</h3>
+                    <p class="text">
+                        Los niños de todas las edades adoran los rompecabezas. Estos no solo son un excelente pasatiempo, 
+                        sino también una herramienta educativa muy valiosa. Con nuestros juego de rompecabezas, 
+                        los niños se divierten mientras aprenden más sobre nuestro cuento y la moraleja que enseña.
+                    </p>
+                    <div class="btn">
+                        <a id="button" href="https://im-a-puzzle.com/share/1fe79cc5e96dac4">Juega</a>
+                    </div>
+                </div>
+                <div  class="hijo2" id="resumen">
+                    <img id="resumen-image" src="images/mockup3.jpg" alt="Imagen del rompecabezas de Dingo y Dogo">
+                </div>
+            </div>
     </main>
     <footer>
         <p>
