--- a/juegos.html
+++ b/juegos.html
@@ -64,7 +64,7 @@
         <div class="padre">
                 <div class="hijo1">
                     <h3 class="juegos" id="rompecabezas">Rompecabezas</h3>
-                    <p class="text">
+                    <p class="text" id="rompecabezas ">
                         Los niños de todas las edades adoran los rompecabezas. Estos no solo son un excelente pasatiempo, 
                         sino también una herramienta educativa muy valiosa. Con nuestros juego de rompecabezas, 
                         los niños se divierten mientras aprenden más sobre nuestro cuento y la moraleja que enseña.
